Fixed portrait alignment issue

--- a/src/scss/App.sass
+++ b/src/scss/App.sass
@@ -30,7 +30,10 @@ body
   flex-wrap: wrap
 
   @media screen and (max-width: 760px)
-    padding: 1em 2em
+    padding: 1rem 2rem
+
+  @media screen and (max-width: 360px)
+    padding: 1rem 0.5rem
 
   .title
     color: $accent
@@ -39,6 +42,10 @@ body
     display: flex
     align-items: center
     gap: 1.5rem
+
+    @media screen and (max-width: 360px)
+      width: 100%
+      padding: 0 0.5rem
 
     .nav-link
       text-decoration: none
@@ -81,13 +88,12 @@ body
 
   .portrait
     width: 22.5rem
+    max-width: 90%
     margin: 0 auto
 
     img
-      display: block
       width: 100%
-      height: 22.5rem
-      object-position: 0rem -1.75rem
+      height: auto
       object-fit: cover
       border-radius: 50%
       background-color: $darkaccent
